# rint-data-manager

./: .env.example  .gitignore  ADMIN_GUIDE.md  README.md  config.yml  config.yml.template  db_manager.py  main.py  pyproject.toml  setup.sh  setup_dvc_storage.py  uvicorn_log_config.json
.dvc/: config
backend/: auth.py  config.py  database.py  dvc_auth.py  dvc_service.py  main.py  schemas.py
backend/routers/: __init__.py  admin.py  auth.py  data.py  dvc_remote.py  log.py
backend/utils/: __init__.py  timing.py
collect-metadata/: DVC_METADATA_SOLUTION.md  fabfile.py  install-dvc-hooks.sh  post-commit  post-commit.template  pre-push  pre-push.template
deployment/: Dockerfile.client  Dockerfile.client.template  Dockerfile.server  Dockerfile.server.template  README.md  cleanup.sh  demo.sh  demo.sh.template  docker-compose.yml  docker-compose.yml.template  rint-data-manager.service  setup-demo.sh  setup-demo.sh.template
docs/: ADMIN_GUIDE.md  TIMING_DEBUG_README.md
static/: style.css
templates/: admin.html  dashboard.html  index.html  login.html  register-admin.html  register.html  usage.html
test/: Dockerfile.client  Dockerfile.server  Dockerfile.test-client  README.md  cleanup.sh  demo.sh  docker-compose.yml  setup-demo.sh  setup-dev-client.sh  test_dvc_remote.py  test_functions.py
test/demo-project/: README.md  data_generator.py
test/scripts/: entrypoint.sh  setup-project-dvc  setup-project-git  setup-users-enhanced
